# Emote

./: .env  .flake8  .gitignore  Dockerfile  Makefile  Pipfile  README.md  com.tomjwatson.Emote.yml  emote.desktop  emote.spec  meson.build  requirements.txt  setup.py  update-emojis
.github/workflows/: build.yml
debian/: changelog  control  copyright  rules
emote/: __init__.py  __main__.py  config.py  css.py  debouncer.py  emojis.py  emote.in  guide.py  keybinding.py  keyboard_shortcuts.py  meson.build  picker.py  settings.py  threading.py  user_data.py
flatpak/: com.tomjwatson.Emote.desktop  com.tomjwatson.Emote.metainfo.xml  com.tomjwatson.Emote.yml  meson.build  python3-requirements.json
snap/: snapcraft.yaml
snap/gui/: emote.desktop
static/: README.md  com.tomjwatson.Emote.desktop  debian_emote.desktop  emojis.csv  emojis.json  emote.1  meson.build  prepare-launch  setup-autostart  style.css  ydotool  ydotoold
